# ticketmaster

./: .gitignore  LICENSE  docker-compose.yml  dockerfile  pyproject.toml  readme.md  requirements.txt
.github/workflows/: pytest.yml
app/: __init__.py  config.py  logging.ini  main.py  model.py
tests/: test_app.py  test_root.py
ticket-dashboard/: Dockerfile  package-lock.json  package.json
ticket-dashboard/src/: App.css  App.js  App.test.js
